Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
     }
    ],
    "source": [
-    "x_values = list(sbudget'])\n",
+    "x_values = list(map(lambda movie:))\n",
     "y_values = list(scaled_movies['domgross'])"
    ]
   },
