--- a/index.ipynb
+++ b/index.ipynb
@@ -824,7 +824,10 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    pass"
+    "    y_hat = m*x + b\n",
+    "    y = y_actual(x, x_values, y_values)\n",
+    "    name = 'error at ' + str(x)\n",
+    "    return {'x': [x, x], 'y': [y, y_hat], 'mode': 'lines', 'marker': {'color': 'red'}, 'name': name}"
    ]
   },
   {
